--- a/addPost.html
+++ b/addPost.html
@@ -348,7 +348,7 @@
                                 <label for="price"> Price </label>
                                 <div class="input-group">
                                     <span class="input-group-text"> $ </span>
-                                    <input type="text" class="form-control" placeholder="00" id="price">
+                                    <input type="text" class="form-control" placeholder="00" id="price" required>
                                 </div>
                             </div>
                             <!-- form check -->
@@ -386,7 +386,200 @@
                         <div class="formButtons">
                             <button type="button" class="prev">Previous <img src="img/icons/arrow.svg" alt="">
                             </button>
-                            <button type="submit" class="submit">Submit</button>
+                            <button type="button" class="next"> Preview </button>
+                        </div>
+                    </div>
+                    <!-- step -->
+                    <div class="step" id="step-5">
+                        <div class="head">
+                            <h2 class="title">Step 4: <span> Preview </span> </h2>
+                            <p class="subtitle"> Preview your post </p>
+                        </div>
+
+                        <!-- itemDetails -->
+                        <section class="itemDetails d-flex flex-column gap-3">
+
+                            <!-- itemDetailsSlider -->
+                            <div class="itemDetailsSlider">
+                                <!-- projectDetails Slider -->
+                                <div class="swiper slider">
+                                    <div class="swiper-wrapper">
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (1).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (1).jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (2).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (2).jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (3).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (3).jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (4).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (4).jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (5).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (5).jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (6).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (6).jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <!-- swiper Slide -->
+                                        <div class="swiper-slide">
+                                            <a href="img/listing/item (7).jpg" data-fancybox="project1">
+                                                <img src="img/listing/item (7).jpg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- swiper Control -->
+                                    <div class="swiperControl">
+                                        <!-- <div class="swiper-pagination"></div> -->
+                                        <div class="swiperBtns">
+                                            <div class="swiper-button-prev"></div>
+                                            <div class="swiper-button-next"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Thumbs -->
+                                <div class="swiper thumbs">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (1).jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (2).jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (3).jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (4).jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (5).jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (6).jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/listing/item (7).jpg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- priceInfo -->
+                            <div class="priceInfo">
+                                <div class="price"> <span> $1,200 </span> </div>
+                                <div class="actions">
+                                    <span class="category">
+                                        <img src="img/categories/icon (1).svg" alt="">
+                                        Electronics
+                                    </span>
+                                </div>
+                            </div>
+                            <!-- itemInfo -->
+                            <div class="itemInfo">
+                                <h3 class="title"> Apple MacBook Air (2023) Apple M2 Chip </h3>
+                                <!-- itemBottom -->
+                                <div class="itemBottom">
+                                    <a href="#!" class="location"> <img src="img/icons/location.svg" alt="">
+                                        <span> USA, California </span>
+                                    </a>
+                                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                                    <div class="views"> <img src="img/icons/eye.svg" alt=""> 1.2k </div>
+                                </div>
+                                <p class="description">
+                                    The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It
+                                    is loaded with 8GB RAM and
+                                    256GB SSD. The MacBook Air features a brilliant Retina display, a
+                                    FaceTime HD camera, and studio‑quality
+                                    mics. It comes with the same compact design but now it supports up to 20
+                                    hours of battery life and an
+                                    active cooling system to sustain enhanced performance. macOS and M2 work
+                                    together to bring more speed
+                                    and responsiveness to all your go‑to apps. The Apple MacBook Air comes
+                                    with active cooling that sustains
+                                    blazing‑fast performance.
+                                </p>
+                                <div class="instructions">
+                                    <span> Used (normal wear) </span>
+                                    <span> Shipping </span>
+                                    <span> Firm price </span>
+                                </div>
+                            </div>
+                            <!-- itemDetailsBox -->
+                            <div class="itemDetailsBox">
+                                <h4 class="title">Key Features</h4>
+                                <ul>
+                                    <li>
+                                        <span>MPN</span>
+                                        <p> MLY33LL/A / MLY33ZP/A</p>
+                                    </li>
+                                    <li>
+                                        <span>Model</span>
+                                        <p> MacBook Air (2022) M2 Chip Model</p>
+                                    </li>
+                                    <li>
+                                        <span>Processor</span>
+                                        <p> Apple M2 chip, 8-core CPU with 4 performance cores and 4
+                                            efficiency cores</p>
+                                    </li>
+                                    <li>
+                                        <span>RAM</span>
+                                        <p> 8GB, Storage: 256GB SSD</p>
+                                    </li>
+                                    <li>
+                                        <span>Display</span>
+                                        <p> 13.6" Liquid Retina display (2560 x 1664)</p>
+                                    </li>
+                                    <li>
+                                        <span>Features</span>
+                                        <p> Backlit Magic Keyboard and the Touch ID</p>
+                                    </li>
+                                    <li>
+                                        <span>Processor Brand</span>
+                                        <p> Apple</p>
+                                    </li>
+                                    <li>
+                                        <span>Processor Model</span>
+                                        <p> M2 Chip</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- itemDetailsBox -->
+                            <div class="itemDetailsBox">
+                                <h4 class="title">Extra Features</h4>
+                                <div class="features">
+                                    <span> Airbag </span>
+                                    <span> ABS </span>
+                                    <span> Air Condioning </span>
+                                    <span> AM/FM Radio </span>
+                                    <span> EBD </span>
+                                </div>
+                            </div>
+
+                        </section>
+                        <!-- form buttons -->
+                        <div class="formButtons">
+                            <button type="button" class="prev">Previous <img src="img/icons/arrow.svg" alt="">
+                            </button>
+                            <button type="submit" class="submit"> confirm and Post  </button>
                         </div>
                     </div>
                 </form>
