--- a/addPost.html
+++ b/addPost.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
@@ -19,7 +18,6 @@
     <!-- Custom style  -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
     <!-- ================ Header ================= -->
     <header>
@@ -233,6 +231,57 @@
                         <div class="formInputs">
                             <!-- form group -->
                             <div class="formGroup">
+                                <label for="photos"> photos </label>
+                                 <!-- profile Image -->
+                                <div class="profileImage wide">
+                                    <input type="file" id="profileImageInput" accept="image/*" />
+                                    <label for="profileImageInput" class="profileImageLabel">
+                                        <img src="img/icons/uploadImg.svg" alt="Profile Image"
+                                            id="profileImagePreview" />
+                                    </label>
+                                    <span><img src="img/icons/plus.svg" alt=""></span>
+                                </div>
+                                <div class="moreImages">
+                                    <!-- profile Image -->
+                                    <div class="profileImage wide">
+                                        <input type="file" id="profileImageInput" accept="image/*" />
+                                        <label for="profileImageInput" class="profileImageLabel">
+                                            <img src="img/icons/uploadImg.svg" alt="Profile Image"
+                                                id="profileImagePreview" />
+                                        </label>
+                                        <span><img src="img/icons/plus.svg" alt=""></span>
+                                    </div>
+                                     <!-- profile Image -->
+                                    <div class="profileImage wide">
+                                        <input type="file" id="profileImageInput" accept="image/*" />
+                                        <label for="profileImageInput" class="profileImageLabel">
+                                            <img src="img/icons/uploadImg.svg" alt="Profile Image"
+                                                id="profileImagePreview" />
+                                        </label>
+                                        <span><img src="img/icons/plus.svg" alt=""></span>
+                                    </div>
+                                     <!-- profile Image -->
+                                    <div class="profileImage wide">
+                                        <input type="file" id="profileImageInput" accept="image/*" />
+                                        <label for="profileImageInput" class="profileImageLabel">
+                                            <img src="img/icons/uploadImg.svg" alt="Profile Image"
+                                                id="profileImagePreview" />
+                                        </label>
+                                        <span><img src="img/icons/plus.svg" alt=""></span>
+                                    </div>
+                                     <!-- profile Image -->
+                                    <div class="profileImage wide">
+                                        <input type="file" id="profileImageInput" accept="image/*" />
+                                        <label for="profileImageInput" class="profileImageLabel">
+                                            <img src="img/icons/uploadImg.svg" alt="Profile Image"
+                                                id="profileImagePreview" />
+                                        </label>
+                                        <span><img src="img/icons/plus.svg" alt=""></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- form group -->
+                            <div class="formGroup">
                                 <label for="title"> Title </label>
                                 <input type="text" class="form-control" id="title" placeholder="Title" required>
                             </div>
@@ -378,9 +427,6 @@
                                     <label class="form-check-label fw-normal" for="Shipping"> Shipping </label>
                                 </div>
                             </div>
-
-
-
                         </div>
                         <!-- form buttons -->
                         <div class="formButtons">
@@ -395,10 +441,8 @@
                             <h2 class="title">Step 4: <span> Preview </span> </h2>
                             <p class="subtitle"> Preview your post </p>
                         </div>
-
                         <!-- itemDetails -->
                         <section class="itemDetails d-flex flex-column gap-3">
-
                             <!-- itemDetailsSlider -->
                             <div class="itemDetailsSlider">
                                 <!-- projectDetails Slider -->
@@ -573,13 +617,12 @@
                                     <span> EBD </span>
                                 </div>
                             </div>
-
                         </section>
                         <!-- form buttons -->
                         <div class="formButtons">
                             <button type="button" class="prev">Previous <img src="img/icons/arrow.svg" alt="">
                             </button>
-                            <button type="submit" class="submit"> confirm and Post  </button>
+                            <button type="submit" class="submit"> confirm and Post </button>
                         </div>
                     </div>
                 </form>
@@ -963,5 +1006,4 @@
         });
     </script>
 </body>
-
 </html>
