--- a/addPost.html
+++ b/addPost.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
@@ -18,6 +19,7 @@
     <!-- Custom style  -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
     <!-- ================ Header ================= -->
     <header>
@@ -232,49 +234,54 @@
                             <!-- form group -->
                             <div class="formGroup">
                                 <label for="photos"> photos </label>
-                                 <!-- profile Image -->
+                                <!-- profile Image -->
                                 <div class="profileImage wide">
-                                    <input type="file" id="profileImageInput" accept="image/*" />
+                                    <input type="file" class="profileImageInput" id="profileImageInput"
+                                        accept="image/*" />
                                     <label for="profileImageInput" class="profileImageLabel">
                                         <img src="img/icons/uploadImg.svg" alt="Profile Image"
-                                            id="profileImagePreview" />
+                                            class="profileImagePreview" />
                                     </label>
                                     <span><img src="img/icons/plus.svg" alt=""></span>
                                 </div>
                                 <div class="moreImages">
                                     <!-- profile Image -->
                                     <div class="profileImage wide">
-                                        <input type="file" id="profileImageInput" accept="image/*" />
-                                        <label for="profileImageInput" class="profileImageLabel">
+                                        <input type="file" class="profileImageInput" id="profileImageInput2"
+                                            accept="image/*" />
+                                        <label for="profileImageInput2" class="profileImageLabel">
                                             <img src="img/icons/uploadImg.svg" alt="Profile Image"
-                                                id="profileImagePreview" />
+                                                class="profileImagePreview" />
                                         </label>
                                         <span><img src="img/icons/plus.svg" alt=""></span>
                                     </div>
-                                     <!-- profile Image -->
+                                    <!-- profile Image -->
                                     <div class="profileImage wide">
-                                        <input type="file" id="profileImageInput" accept="image/*" />
-                                        <label for="profileImageInput" class="profileImageLabel">
+                                        <input type="file" class="profileImageInput" id="profileImageInput3"
+                                            accept="image/*" />
+                                        <label for="profileImageInput3" class="profileImageLabel">
                                             <img src="img/icons/uploadImg.svg" alt="Profile Image"
-                                                id="profileImagePreview" />
+                                                class="profileImagePreview" />
                                         </label>
                                         <span><img src="img/icons/plus.svg" alt=""></span>
                                     </div>
-                                     <!-- profile Image -->
+                                    <!-- profile Image -->
                                     <div class="profileImage wide">
-                                        <input type="file" id="profileImageInput" accept="image/*" />
-                                        <label for="profileImageInput" class="profileImageLabel">
+                                        <input type="file" class="profileImageInput" id="profileImageInput4"
+                                            accept="image/*" />
+                                        <label for="profileImageInput4" class="profileImageLabel">
                                             <img src="img/icons/uploadImg.svg" alt="Profile Image"
-                                                id="profileImagePreview" />
+                                                class="profileImagePreview" />
                                         </label>
                                         <span><img src="img/icons/plus.svg" alt=""></span>
                                     </div>
-                                     <!-- profile Image -->
+                                    <!-- profile Image -->
                                     <div class="profileImage wide">
-                                        <input type="file" id="profileImageInput" accept="image/*" />
-                                        <label for="profileImageInput" class="profileImageLabel">
+                                        <input type="file" class="profileImageInput" id="profileImageInput5"
+                                            accept="image/*" />
+                                        <label for="profileImageInput5" class="profileImageLabel">
                                             <img src="img/icons/uploadImg.svg" alt="Profile Image"
-                                                id="profileImagePreview" />
+                                                class="profileImagePreview" />
                                         </label>
                                         <span><img src="img/icons/plus.svg" alt=""></span>
                                     </div>
@@ -1006,4 +1013,5 @@
         });
     </script>
 </body>
+
 </html>
