--- a/editProfile.html
+++ b/editProfile.html
@@ -132,9 +132,9 @@
                     <div class=" col-md-7 col-lg-8 col-xl-9 p-2 profileContent">
                         <form class="cardForm" data-aos="fade-up">
                             <div class="profileImage">
-                                <input type="file" id="profileImageInput" accept="image/*" />
+                                <input type="file" class="profileImageInput" id="profileImageInput" accept="image/*" />
                                 <label for="profileImageInput" class="profileImageLabel">
-                                    <img src="img/users/user (3).png" alt="Profile Image" id="profileImagePreview" />
+                                    <img src="img/users/user (3).png" alt="Profile Image" class="profileImagePreview" />
                                 </label>
                                 <span><img src="img/icons/plus.svg" alt=""></span>
                             </div>
