--- a/register.html
+++ b/register.html
@@ -109,9 +109,9 @@
           <div class="col-md-8 col-lg-6 col-xl-5 m-auto p-2">
             <form action="myPosts.html" class="cardForm" data-aos="fade-up">
               <div class="profileImage">
-                <input type="file" id="profileImageInput" accept="image/*" />
+                <input type="file" class="profileImageInput" id="profileImageInput" accept="image/*" />
                 <label for="profileImageInput" class="profileImageLabel">
-                  <img src="img/placeholder.svg" alt="Profile Image" id="profileImagePreview" />
+                  <img src="img/placeholder.svg" alt="Profile Image" class="profileImagePreview" />
                 </label>
                 <span><img src="img/icons/plus.svg" alt=""></span>
               </div>
