--- a/truYou.html
+++ b/truYou.html
@@ -136,9 +136,9 @@
                                 <h5> Please Verify your account by uploading your ID </h5>
                             </div>
                             <div class="profileImage wide">
-                                <input type="file" id="profileImageInput" accept="image/*" />
+                                <input type="file" class="profileImageInput" id="profileImageInput" accept="image/*" />
                                 <label for="profileImageInput" class="profileImageLabel">
-                                    <img src="img/icons/uploadImg.svg" alt="Profile Image" id="profileImagePreview" />
+                                    <img src="img/icons/uploadImg.svg" alt="Profile Image" class="profileImagePreview" />
                                 </label>
                                 <span><img src="img/icons/plus.svg" alt=""></span>
                             </div>
