--- a/editProfile.html
+++ b/editProfile.html
@@ -50,7 +50,7 @@
                 </ul>
             </nav>
             <!-- Actions -->
-                        <div class="moreActions">
+            <div class="moreActions">
                 <div class="dropdown">
                     <button class=" dropdown-toggle link text" type="button" id="addPost" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -139,7 +139,8 @@
                                 <span><img src="img/icons/plus.svg" alt=""></span>
                             </div>
                             <div class="formGroup">
-                                <input type="text" class="form-control" name="" value="Mahmoud Elkomy" id="name" placeholder="User Name">
+                                <input type="text" class="form-control" name="" value="Mahmoud Elkomy" id="name"
+                                    placeholder="User Name">
                             </div>
                             <div class="formGroup">
                                 <input type="text" class="form-control" name="" id="location" placeholder="Location"
