--- a/truYou.html
+++ b/truYou.html
@@ -138,7 +138,8 @@
                             <div class="profileImage wide">
                                 <input type="file" class="profileImageInput" id="profileImageInput" accept="image/*" />
                                 <label for="profileImageInput" class="profileImageLabel">
-                                    <img src="img/icons/uploadImg.svg" alt="Profile Image" class="profileImagePreview" />
+                                    <img src="img/icons/uploadImg.svg" alt="Profile Image"
+                                        class="profileImagePreview" />
                                 </label>
                                 <span><img src="img/icons/plus.svg" alt=""></span>
                             </div>
