--- a/myPosts.html
+++ b/myPosts.html
@@ -121,9 +121,9 @@
                             <a href="myPosts.html"> <img src="img/icons/myPosts.svg" alt=""> my posts </a>
                             <a href="notifications.html"> <img src="img/icons/notifications.svg" alt=""> notifications
                             </a>
-                            <a href="bought.html"> <img src="img/icons/bought.svg" alt=""> Bought </a>
+                            <a href="bought.html"> <img src="img/icons/boughtIcon.svg" alt=""> Bought </a>
                             <a href="favorite.html"> <img src="img/icons/favorite.svg" alt=""> Favorite </a>
-                            <a href="truYou.html"> <img src="img/icons/truYou.svg" alt=""> TruYou </a>
+                            <a href="truYou.html"> <img src="img/icons/truyouIcon.svg" alt=""> TruYou </a>
                             <a href="editProfile.html"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
                             <a href="login.html"> <img src="img/icons/logout.svg" alt=""> logout </a>
                         </div>
