--- a/editProfile.html
+++ b/editProfile.html
@@ -121,9 +121,9 @@
                             <a href="myPosts.html"> <img src="img/icons/myPosts.svg" alt=""> my posts </a>
                             <a href="notifications.html"> <img src="img/icons/notifications.svg" alt=""> notifications
                             </a>
-                            <a href="bought.html"> <img src="img/icons/bought.svg" alt=""> Bought </a>
+                            <a href="bought.html"> <img src="img/icons/boughtIcon.svg" alt=""> Bought </a>
                             <a href="favorite.html"> <img src="img/icons/favorite.svg" alt=""> Favorite </a>
-                            <a href="truYou.html"> <img src="img/icons/truYou.svg" alt=""> TruYou </a>
+                            <a href="truYou.html"> <img src="img/icons/truyouIcon.svg" alt=""> TruYou </a>
                             <a href="editProfile.html"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
                             <a href="login.html"> <img src="img/icons/logout.svg" alt=""> logout </a>
                         </div>
@@ -149,6 +149,38 @@
                             <div id="mapView"></div>
                             <button type="submit" class="customBtn mt-4">Confirm</button>
                         </form>
+
+                        <a href="#" class="btn ms-auto btn-dark mt-4" style="width: fit-content;" data-bs-toggle="modal"
+                            data-bs-target=".modalId" data-aos="fade-up"> 
+                         <img src="img/icons/deleteAccount.svg" alt="">    Delete Account 
+                        </a>
+
+                        <!-- Modal -->
+                        <div class=" modal fade modalId" tabindex="-1" data-bs-keyboard="false" role="dialog"
+                            aria-hidden="true">
+                            <div class="modal-dialog  modal-dialog-centered " role="document">
+                                <div class="modal-content">
+                                    <div class="modalHeader">
+                                        <h5 class="modalTitle">
+                                            Delete Account
+                                        </h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modalBody">
+                                        <h6 class="text">
+                                            Are you sure you want to delete your account?
+                                        </h6>
+                                    </div>
+                                    <div class="modalFooter">
+                                        <button type="button" class="btn btn-outline-dark  " data-bs-dismiss="modal">
+                                            Cancel
+                                        </button>
+                                        <button type="button" class=" btn btn-danger"> Delete </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
